styles.css
/* Globals */
* { box-sizing: border-box; 
}

html {
  scroll-behavior: smooth;
}

body {
  color: #0B0A08;
  background-color: #FFFFFF;
}

body, html {
  margin: 0;
  padding: 0;
}

/* Button */
button {
  background-color: #DC4131;
  color: #FFFFFF;
  border: none;
  font-size: 16px;
  height: 18px;
  border-radius: 8px;
  display: inline-flex;
  padding: 10px 16px;
  margin-top: 45px;
  align-items: center;
  justify-content: center;
  width: 320px;
  height: 44px;
  margin-bottom: 90px;
}

button:hover {
  background-color: #AE2E21 ; /* Darker red */
  transition: opacity 0.3s;
  color: white;
}

/* This is the checkout item in menu */
.nav-button {
  background-color: none;
  color: #0B0A08;
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  text-decoration: none;
  position: absolute;
  top: 732px;
}

/* This is the checkout button in navigation */
header button {
  background-color: #008F51;
  color: #0B0A08;
  border-radius: 50px;
  width: 47px;
  height: 36px;
  font-size: 14px;
}

header button:hover {
  background-color: #008F51; 
  opacity: 0.75;
  transition: opacity 0.3s;
  color: #0B0A08;
}

.cart-button {
  margin-bottom: 45px;
}

ul {
  list-style-type: none;
  padding: 0;
}

/* Header */
header {
  position: relative;
  height: 60px;
  background-color: #F7F2DE;
  border-bottom: 1px solid #0B0A08;
  color: #0B0A08;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 32px;
} 

header h4 {
  font-family: 'Frank Ruhl Libre';
  font-size: 32px;
  text-align: center;
  justify-content: center;
  font-weight: 200;
}

.hamburger {
  cursor: pointer;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 5px;
  width: 30px;
  height: 25px;
  z-index: 10;
}

.hamburger span {
  height: 3px;
  width: 21px;
  background-color: #0B0A08;
  display: block;
  transition: all 0.3s ease;
}

/* Hamburger transform into X */
.hamburger.open span:nth-child(1) {
  transform: rotate(45deg) translate(5px, 5px);
}

.hamburger.open span:nth-child(2) {
  opacity: 0;
}

.hamburger.open span:nth-child(3) {
  transform: rotate(-45deg) translate(6px, -6px);
}

/* Menu (hidden by default) */
.menu {
  position: absolute;
  top: 60px;
  left: 0;
  background-color: #008F51;
  width: 475px;
  max-width: 100%;
  height: 100vh;
  display: none;
  flex-direction: column;
  align-items: center;
  padding: 188px 0 1rem 0;
  z-index: 999; /* Higher than the background */
}

.menu a {
  color: #0B0A08;
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  text-decoration: none;
  margin: 1rem 0;
}

/* Menu visible when open */
.menu.open {
  display: flex;
}


.hero {
  background-image: url('markus-spiske-WcLzVLbUP5g-unsplash-web.jpg');
  background-size: cover;
  background-position: center;
  height: 100vh;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  z-index: 1; /* Lower than the menu */
}

.hero .divider {
  width: 1px;
  height: 208px;
  background-color: white;
  margin: 20px 0;
}

.hero h1 {
  margin: 0;
}

.hero p {
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: white;
}

/* Typography */
h1 {
  font-family: 'Frank Ruhl Libre';
  font-size: 200px;
  font-weight: 200;
  color: #FFFFFF;
}

h2 {
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  font-weight: 200;
  margin-top: 90px;
  margin-bottom: 8px;
  color: #0B0A08;
}

h3 {
  font-family: 'Frank Ruhl Libre';
  font-size: 48px;
  font-weight: 200;
  color: #FFFFFF;
}

h4 {
  font-family: "Arimo", sans-serif;
  font-size: 20px;
  font-weight: 200;
  color: #0B0A08;
}

p {
  font-family: 'Frank Ruhl Libre';
  font-weight: 200;
  font-size: 20px;
  color: #0B0A08;
}

/* Section 1 - Landscape */
#landscape h1 {
  text-align: center;
  color: #FFFFFF;
}

.vl {
  border-left: 2px solid #FFFFFF;
  height: 208px;
  position: absolute;
  left: 50%;
  margin-left: -3px;
  top: 50%;
}

#landscape h2 {
  text-align: center;
  color: #FFFFFF;
  width: 416px;
  justify-content: center;
}


/* Section 2 - Shop-Ask */
#shop-ask {
  background-color: #FFFFFF;
  text-align: center;
}

#shop-ask ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
}

#shop-ask ul li {
  width: 49%;
}

#shop-ask img {
  max-width: 100%;
  border-radius: 16px;
  margin-top: 45px;
  margin-bottom: 45px;
  width: 448px;
  height: 327px;
}

#shop-ask p {
  width: 407px;
  margin: 0 auto;
}

/* Section 3 - This is how it works */
.container {
  display: flex;
  margin: 0 auto;
  padding: 0px 45px;
  background-color: #F7F2DE;
  border-bottom: solid 1px #0B0A08;
  border-top: solid 1px #0B0A08;
  height: 785px;
}

.left-panel {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 489px;
}

.right-panel {
  flex: 2;
  display: flex;
  flex-direction: column;
  gap: 40px;
  margin-left: 90px;
  border-left: solid 1px #0B0A08;
}

.step {
  display: flex;
  gap: 20px;
  align-items: center;
  height: 197px;
}

.step-title {
  width: 278px;
  font-family: "Arimo", sans-serif;
  flex-shrink: 0;
  padding-left: 90px;
}

.step-content {
  font-family: "Arimo", sans-serif;
  max-width: 414px;
  flex: 1;
}

a {
  color: #000000;
  text-decoration: underline;
}


/* Section 4 - Popular produce*/
#popular {
  background-color: #FFFFFF;
  margin-left: 45px;
  margin-right:45px;
}

#popular ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  gap: 29px;
}

#popular img {
  max-width: 100%;
  border-radius: 16px;
  width: 454px;
  height: 432px;
}

#popular h2 {
  padding-bottom: 45px;
}


#popular p {
  font-family: "Arimo", sans-serif;
  font-size: 24px;
  margin-top: 18px;
  margin-bottom: 10px;
}
/* ... */

